<resources>

    <string-array name="DrumScreenEdit">
        <item>@string/volume</item>
        <item>@string/pan</item>
        <item>@string/pitch</item>
        <item>@string/high_pass_filter</item>
        <item>@string/low_pass_filter</item>
        <item>@string/reverb</item>
        <item>@string/delay</item>
    </string-array>


    <string name="app_name">NextSoundz</string>
    <string name="load_confirm">Load</string>
    <string name="load_alert_message">Load a sound</string>
    <string name="load_cancel">Cancel</string>

    <item name="pad_height" format="float" type="dimen">.25</item>
    <string name="title_activity_load_drum_sound">LoadDrumSoundActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="soundfx">SoundFX</string>
    <string name="sound_fx_tag">Sound FX</string>
    <string name="rnb_tag">RnB</string>
    <string name="west_coast_hip_hop_tag">West Coast Hip-Hop</string>
    <string name="east_coast_hip_hop_tag">East Coast Hip-Hop</string>
    <string name="trap_soul_tag">Trap Soul</string>
    <string name="trap_tag">Trap</string>
    <string name="arpeggio_tag">Arpeggio</string>
    <string name="atmospheric_tap">Atmospheric</string>
    <string name="guitar_tag">Guitar</string>
    <string name="keys_tag">Keys</string>
    <string name="synthesizer_tag">Synthesizer</string>
    <string name="strings_tag">Strings</string>
    <string name="pads_tag">Pads</string>
    <string name="hats_tag">Hats</string>
    <string name="snares_tag">Snares</string>
    <string name="kicks_tag">Kicks</string>
    <string name="_808_s_tag">808\'s</string>
    <string name="clapsTag">Claps</string>
    <string name="percussion_tag">Percussion</string>
    <string name="builds_tag">Builds</string>
    <string name="fills_tag">Fills</string>
    <string name="rolls_tag">Rolls</string>
    <string name="shakers_tag">Shakers</string>
    <string name="snaps_tag">Snaps</string>
    <string name="toms_tag">Toms</string>
    <string name="crash_cymbals_tag">Cymbals</string>
    <string name="transfx_tag">TransFX</string>
    <string name="bpm">BPM</string>
    <string name="isMetronomeOn">isMetronomeOn</string>
    <string name="project_tempo">project tempo</string>
    <string name="metronomeSoundId">metronome sound id</string>
    <string name="selectedBar">selected bar measure</string>
    <string name="selectedPattern">selected pattern</string>
    <string name="selectedInstrument">selected instrument track</string>
    <string name="selectedDrumBank">selected drum bank</string>
    <string name="soundID">SoundFileId</string>
    <string name="padSelected">padSelected</string>


    <string name="pan">Pan</string>
    <string name="pitch">Pitch</string>
    <string name="volume">Volume</string>
    <string name="high_pass_filter">High Pass Filter</string>
    <string name="low_pass_filter">Low Pass Filter</string>
    <string name="reverb">Reverb</string>
    <string name="delay">Delay</string>


    <string name="ui_clock">%1$d : %s</string>

    <!-- settings Pattern titles -->
    <string name="p1">P1</string>
    <string name="p2">P2</string>
    <string name="p3">P3</string>
    <string name="p4">P4</string>
    <string name="p5">P5</string>
    <string name="p6">P6</string>
    <string name="p7">P7</string>
    <string name="p8">P8</string>
    <string name="p9">P9</string>
    <string name="p10">P10</string>
    <string name="p11">P11</string>
    <string name="p12">P12</string>

    <!-- Settings quantize titles -->
    <string name="quantize_checkbox">Quantize</string>
    <string name="one_eight_quantize">1/8</string>
    <string name="one_sixtenth_quantize">1/16</string>
    <string name="one_thirty_two_quantize">1/32</string>
    <string name="sixtenth_triplet_quantize">16/tp</string>
    <string name="dotted_quantize">Dot</string>


    <!-- store -->
    <string name="store_title">Store</string>
    <string name="sounds_title">Sounds</string>
    <string name="loops_title">Loops</string>
    <string name="projects_title">Projects</string>
    <string name="all_tag">All</string>

    <string name="main_slider_short_volume_label">V</string>
    <string name="main_slider_short_pan_label">P</string>
    <string name="main_slider_short_pitch_label">PI</string>
    <string name="main_edit_menu_label">E</string>

    <!-- shared prefs keys -->
    <string name="application_shared_prefs">App shared prefs</string>
    <string name="shared_prefs_pattern_selected">pattern selected</string>
    <string name="shared_prefs_bar_selected">bar selected</string>
    <string name="shared_prefs_count_in_selected">count in selected</string>
    <string name="count_in_default">4</string>

    <string name="shared_prefs_instrument_selected">instrument selected</string>
    <string name="shared_prefs_drum_bank_selected">drum bank selected</string>
    <string name="shared_prefs_quantize_selected">quantize selected</string>
    <string name="shared_prefs_quantize_checkbox_selected">quantize checkbox selected</string>

    <!-- music bar measure title -->
    <string name="one_bar_measure_text">1</string>
    <string name="two_bar_measure_text">2</string>
    <string name="four_bar_measure_text">4</string>
    <string name="eight_bar_measure_text">8</string>
    <string name="instrument_keys_title">Keys</string>
    <string name="instrument_horns_title">Horns</string>
    <string name="instrument_strings_title">Strings</string>
    <string name="instrument_guitar_title">Guitar</string>
    <string name="drum_bank_1_title">Bank 1</string>
    <string name="drum_screen_name">Drums</string>
    <string name="instruments_screen_name">Instruments</string>
    <string name="sequence_screen_name">Sequence</string>
    <string name="mixing_screen_name">Mixing</string>
    <string name="song_screen_name">Song</string>
    <string name="automation_ab">A</string>
    <string name="mute_ab">M</string>
    <string name="solo_ab">S</string>


    <string name="fan_off">off</string>
    <string name="fan_low">1</string>
    <string name="fan_medium">2</string>
    <string name="fan_high">3</string>


</resources>
