<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/main_ui_button_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="horizontal">

        <com.example.blacksquare.Views.ToggleButtonGroupTableLayout
            android:id="@+id/bar_measure_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TableRow>

                <RadioButton
                    android:id="@+id/pattern_1"
                    style="@style/menu_text"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/radio_button_background"
                    android:button="@android:color/transparent"
                    android:checked="false"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="onBarSelected"
                    android:text="@string/p1"
                    android:textAlignment="center" />

                <RadioButton
                    android:id="@+id/pattern_2"
                    style="@style/menu_text"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/radio_button_background"
                    android:button="@android:color/transparent"
                    android:checked="false"
                    android:onClick="onBarSelected"
                    android:text="@string/p2"
                    android:textAlignment="center" />

                <RadioButton
                    android:id="@+id/pattern_3"
                    style="@style/menu_text"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/radio_button_background"
                    android:button="@android:color/transparent"
                    android:checked="false"
                    android:onClick="onBarSelected"
                    android:text="@string/p3"
                    android:textAlignment="center" />

                <RadioButton
                    android:id="@+id/pattern_4"
                    style="@style/menu_text"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/radio_button_background"
                    android:button="@android:color/transparent"
                    android:checked="false"
                    android:onClick="onBarSelected"
                    android:text="@string/p4"
                    android:textAlignment="center" />

                <RadioButton
                    android:id="@+id/pattern_5"
                    style="@style/menu_text"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/radio_button_background"
                    android:button="@android:color/transparent"
                    android:checked="false"
                    android:clickable="true"
                    android:onClick="onBarSelected"
                    android:text="@string/p5"
                    android:textAlignment="center" />

                <RadioButton
                    android:id="@+id/pattern_6"
                    style="@style/menu_text"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/radio_button_background"
                    android:button="@android:color/transparent"
                    android:checked="false"
                    android:onClick="onBarSelected"
                    android:text="@string/p6"
                    android:textAlignment="center" />

                <RadioButton
                    android:id="@+id/pattern_7"
                    style="@style/menu_text"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/radio_button_background"
                    android:button="@android:color/transparent"
                    android:checked="false"
                    android:onClick="onBarSelected"
                    android:text="@string/p7"
                    android:textAlignment="center" />

                <RadioButton
                    android:id="@+id/pattern_8"
                    style="@style/menu_text"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/radio_button_background"
                    android:button="@android:color/transparent"
                    android:checked="false"
                    android:onClick="onBarSelected"
                    android:text="@string/p8"
                    android:textAlignment="center" />

                <RadioButton
                    android:id="@+id/pattern_9"
                    style="@style/menu_text"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/radio_button_background"
                    android:button="@android:color/transparent"
                    android:checked="false"
                    android:clickable="true"
                    android:onClick="onBarSelected"
                    android:text="@string/p9"
                    android:textAlignment="center" />

                <RadioButton
                    android:id="@+id/pattern_10"
                    style="@style/menu_text"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/radio_button_background"
                    android:button="@android:color/transparent"
                    android:checked="false"
                    android:onClick="onBarSelected"
                    android:text="@string/p10"
                    android:textAlignment="center" />

                <RadioButton
                    android:id="@+id/pattern_11"
                    style="@style/menu_text"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/radio_button_background"
                    android:button="@android:color/transparent"
                    android:checked="false"
                    android:onClick="onBarSelected"
                    android:text="@string/p11"
                    android:textAlignment="center" />

                <RadioButton
                    android:id="@+id/pattern_12"
                    style="@style/menu_text"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/radio_button_background"
                    android:button="@android:color/transparent"
                    android:checked="false"
                    android:onClick="onBarSelected"
                    android:text="@string/p12"
                    android:textAlignment="center" />
            </TableRow>
        </com.example.blacksquare.Views.ToggleButtonGroupTableLayout>

        <Button
            android:id="@+id/toggle_scene"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="12dp"
            android:background="@drawable/ic_chevron_right"
            android:elevation="15dp"
            android:gravity="end"
            android:onClick="onShowMainUi" />
    </LinearLayout>

</LinearLayout>